Fri Jul 29 09:30:43 2005  Nishanth Shanakran  <nshankar@dre.vanderbilt.edu>

        * NEWS:

          Added a brief description about Resource Allocation and Control
          Engine (RACE).

Fri Jul 29 06:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/new_RepositoryManager/new_RepositoryManager.mpc:
          Fixed fuzz error

Thu Jul 28 23:00:11 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * DAnCE/new_RepositoryManager/Options.cpp
        * DAnCE/new_RepositoryManager/Options.h
        * DAnCE/new_RepositoryManager/README.txt
        * DAnCE/new_RepositoryManager/RepositoryManager.cpp
        * DAnCE/new_RepositoryManager/RepositoryManager.idl
        * DAnCE/new_RepositoryManager/RepositoryManager_Impl.cpp
        * DAnCE/new_RepositoryManager/RepositoryManager_Impl.h
        * DAnCE/new_RepositoryManager/ZIP_Wrapper.cpp
        * DAnCE/new_RepositoryManager/ZIP_Wrapper.h
        * DAnCE/new_RepositoryManager/new_RepositoryManager.mpc

        Checked in the changes to new_RepositoryManager

Fri Jul 29 03:52:11 2005  William Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.mpc

        Made is such that Plan_Launcher_Impl library gets generated
        and installed.

Wed Jul 28 15:18:14 2005 Ming Xiong <mxiong@dre.vanderbilt.edu>

        * docs\schema\Modified_Deployment.xsd

          Change the XML element order of IAD to conform to spec

Wed Jul 27 19:20:14 2005 Gan Deng  <dengg@dre.vanderbilt.edu>

        * NEWS

          Added news about naming service integration.

Wed Jul 27 07:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Config_Handlers/cid.cpp:
        * DAnCE/Config_Handlers/cpd.cpp:
        * DAnCE/Config_Handlers/iad.cpp:
          Explicitly initialise base class

Wed Jul 27 07:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Config_Handlers/STD_IAD_Handler.h:
          Fixed fuzz error
